<resources>
    <string name="app_name">Word Reminder</string>
    <string name="title_home">Home</string>
    <string name="word_reminder">Word Reminder</string>
    <string name="english">İngilizce</string>
    <string name="turkish">Türkçe</string>
    <string name="search">Ara</string>
    <string name="changeLang">changeLang</string>
    <string name="enter_text">Metin girin</string>
    <string name="settings">Ayarlar</string>
    <string name="saved">Kaydedilenler</string>
    <string name="menu_search">Arayın</string>
    <string name="menu_saved">Kaydedilenler</string>
    <string name="menu_settings">Ayarlar</string>
    <string name="github_link">https://github.com/BurakGomec/Word_Reminder</string>
    <string name="infoTextView">Bilgilendirme</string>
    <string name="sqlToastMessage">Kelime kayıt edilirken bir hata meydana geldi</string>
    <string name="info">Bu uygulama açık kaynak kodlu olarak geliştirilmiştir.\n\nUygulamada IBM Watson Language Translator servisinin ücretsiz planı kullanılmıştır. Bu yüzden çeviri hizmeti ayda toplam 1,000,000 karakter ve sunucuya atılan istek sayısına göre IBM tarafından sınırlandırılmıştır.\n\nAşağıda verilen link üzerinden uygulamanın tüm kaynak kodlarına ulaşabilirsiniz.\n\nUygulamaya Github ve Google Play üzerinden yıldız vererek destekleyebilir, öneriler sunabilirsiniz.\n\nIcons made by www.freepik.com"\n\nOur preview images were created using 'Previewed' at previewed.app\n\nGeliştirici: Burak GÖMEÇ
    </string>
    <string name="copied">Kopyalandı</string>
    <string name="exit">Çıkış</string>
    <string name="choose_a_language">Bir dil seçiniz</string>
    <string name="getNotification">Bildirim Al</string>
    <string name="notificationInfoTextView">Uygulama her gün belirlenen saatte kaydedilen çevirileri bildirim atmaktadır.\n\nBu saat dilimini değiştirebilir ve bildirimleri kapatabilirsiniz.</string>
    <string name="changeTimeZone">Saat dilimini değiştir (Seçili saat: %1$s)</string>
    <string name="buttonTimeZoneTitle">Bir saat seçiniz(Seçili Saat: %1$s)</string>
    <string name="addStarToTranslation">Bir çeviriye yıldız ekleyin</string>
    <string name="notificationText">İşte son kayıt ettiğiniz çevirilerden birisi </string>


    <string name="checkYourInternetConnection">Lütfen internet bağlantınızı kontrol ediniz</string>
    <string name="noResultsFound">Bir sonuç bulunamadı</string>
    <string name="modelNotFound">Aradığınız 2 dil arasındaki model IBM servisinde bulunamadı</string>
    <string name="generalException">Çeviri servisinde bir hata meydana geldi, lütfen daha sonra tekrar deneyiniz</string>
    <string name="tooManyRequestException">Çeviri servisi yoğun istek sayısından dolayı anlık olarak yanıt vermiyor, lütfen daha sonra tekrar deneyiniz</string>
    <string name="savedTimeZoneSuccessful">Saat diliminiz başarı ile kayıt edildi</string>
    <string name="chooseTheLanguageToTranslate">Çevrilecek dili seçiniz</string>
    <string name="enterWord">Bir kelime giriniz</string>
    <string name="translateTo">Şu dile çevir:</string>
    <string name="pleaseChangeYourNotificationSetting">Lütfen bildirim ayarınızı değiştiriniz</string>
    <string name="cancel">İptal</string>
    <string name="ok">Tamam</string>
    <string name="clearSavedTranslations">Kaydedilen Çevirileri Temizle</string>
    <string name="clearSavedTranslationsMessage">Bu uygulamadaki tüm çeviri kayıtları temizlenecek</string>
    <string name="clearEditText">clearEditText</string>
    <string name="removeStar">removeStar</string>
    <string name="addStar">addStar</string>
    <string name="noClassException">Android sürüm farklılığından dolayı hata meydana geldi, lütfen bunu geliştiriciye bildiriniz</string>
    <string name="permissionY">İzin Ver</string>
    <string name="permissionN">Reddet</string>
    <string name="permissionTitle">\'Word Reminder\' Size Bildirim Göndermek İstiyor</string>
    <string name="changePermissionInfo">Bildirim tercihlerinizi ayarlardan değiştirebilirsiniz</string>

    <string-array name="recyclerItems">
        <item>Hakkında</item>
        <item>Bildirimler</item>
        <item>Geri Bildirim</item>
    </string-array>

    <string-array name="pushMessages">
        <item>Hemen bir çeviriye yıldız ekleyin</item>
        <item>Son aradığınız çevirileri kayıt edin</item>
    </string-array>

    <string-array name="languagesCode">
        <item>en</item>
        <item>tr</item>
        <item>de</item>
        <item>fr</item>
        <item>fr-CA</item>
        <item>hi</item>
        <item>he</item>
        <item>pt</item>
        <item>zh-TW</item>
        <item>hr</item>
        <item>hu</item>
        <item>cnr</item>
        <item>id</item>
        <item>it</item>
        <item>zh</item>
        <item>ja</item>
        <item>nl</item>
        <item>fi</item>
        <item>ga</item>
        <item>gu</item>
        <item>pl</item>
        <item>da</item>
        <item>lt</item>
        <item>lv</item>
        <item>uk</item>
        <item>ur</item>
        <item>ml</item>
        <item>ms</item>
        <item>mt</item>
        <item>el</item>
        <item>es</item>
        <item>et</item>
        <item>nb</item>
        <item>vi</item>
        <item>ne</item>
        <item>ro</item>
        <item>ru</item>
        <item>bg</item>
        <item>bn</item>
        <item>bs</item>
        <item>sk</item>
        <item>sl</item>
        <item>sr</item>
        <item>ko</item>
        <item>sv</item>
        <item>ta</item>
        <item>cs</item>
        <item>te</item>
        <item>th</item>
        <item>cy</item>
        <item>ca</item>
        <item>eu</item>
    </string-array>


    <string-array name="languages">
        <item>İngilizce</item>
        <item>Türkçe</item>
        <item>Almanca</item>
        <item>Fransızca</item>
        <item>Fransızca-Kanada</item>
        <item>Hintçe</item>
        <item>İbranice</item>
        <item>Portekizce</item>
        <item>Geleneksel Çince</item>
        <item>Hırvatça</item>
        <item>Macarca</item>
        <item>Karadağca</item>
        <item>Endonezya Dili</item>
        <item>İtalyanca</item>
        <item>Basitleştirilmiş Çince</item>
        <item>Japonca</item>
        <item>Felemenkçe</item>
        <item>Fince</item>
        <item>İrlandaca</item>
        <item>Guceratça</item>
        <item>Lehçe</item>
        <item>Danca</item>
        <item>Litvanca</item>
        <item>Letonca</item>
        <item>Ukraynaca</item>
        <item>Urduca</item>
        <item>Malayalamca</item>
        <item>Malayca</item>
        <item>Malta Dili</item>
        <item>Yunanca</item>
        <item>İspanyolca</item>
        <item>Estonyaca</item>
        <item>Norveççe</item>
        <item>Vietnamca</item>
        <item>Nepalce</item>
        <item>Romence</item>
        <item>Rusça</item>
        <item>Bulgarca</item>
        <item>Bengalce</item>
        <item>Boşnakça</item>
        <item>Slovakça</item>
        <item>Slovence</item>
        <item>Sırpça</item>
        <item>Korece</item>
        <item>İsveççe</item>
        <item>Tamil</item>
        <item>Çekçe</item>
        <item>Telugu Dili</item>
        <item>Tay Dili</item>
        <item>Galce</item>
        <item>Katalanca</item>
        <item>Baskça</item>
    </string-array>


    <string-array name="hours">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>


    <style name="BrandedSwitch.control" parent="Theme.AppCompat.Light">
        <item name="colorControlActivated">#DA1212</item>
        <item name="colorSwitchThumbNormal">#704C4C</item>
    </style>


</resources>