<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.NotificationsFragment"
    android:background="#F4F4F4">

    <TextView
        android:id="@+id/textViewInfoNotification"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:text="@string/notificationInfoTextView"/>


        <Button
            android:layout_below="@id/textViewInfoNotification"
            android:textStyle="bold"
            android:id="@+id/buttonTimeZone"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:background="@color/ic_launcher_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#DA1212"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:text="@string/changeTimeZone"/>



    <androidx.appcompat.widget.SwitchCompat
        android:layout_margin="10dp"
        android:layout_below="@id/buttonTimeZone"
        android:id="@+id/switchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:textSize="16sp"
        android:longClickable="false"
        android:text="@string/getNotification"
        android:padding="15dp"
        app:theme="@style/BrandedSwitch.control"
        />



</RelativeLayout>